--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 {% include head.html %}
+{% include google_analytics.html %}
 
 <body>
 
@@ -10,6 +11,7 @@
     {{ content }}
 
     {% include footer.html %}
+
 
 </body>
 
